tests/cases/errors/unclosed_bracket.tex
\begin{document}
\textbf{testo non chiuso
\end{document}
